spike progress